// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/transform-bind @bind compiles for private generator method 1`] = `
"class Foo {
  #bar = this.#_bar.bind(this);

  *#_bar() {
    console.log(this);
  }

}"
`;

exports[`@ast-decorators/transform-bind @bind compiles for private method 1`] = `
"class Foo {
  #bar = this.#_bar.bind(this);

  #_bar() {
    console.log(this);
  }

}"
`;

exports[`@ast-decorators/transform-bind @bind compiles for private static generator method 1`] = `
"class Foo {
  static #bar = this.#_bar.bind(this);

  static *#_bar() {
    console.log(this);
  }

}"
`;

exports[`@ast-decorators/transform-bind @bind compiles for private static method 1`] = `
"class Foo {
  static #bar = this.#_bar.bind(this);

  static #_bar() {
    console.log(this);
  }

}"
`;

exports[`@ast-decorators/transform-bind @bind compiles for regular method 1`] = `
"class Foo {
  bar = this.bar.bind(this);

  bar() {
    console.log(this);
  }

}"
`;

exports[`@ast-decorators/transform-bind @bind compiles for static generator method 1`] = `
"class Foo {
  static bar = this.bar.bind(this);

  static *bar() {
    console.log(this);
  }

}"
`;

exports[`@ast-decorators/transform-bind @bind compiles for static method 1`] = `
"class Foo {
  static bar = this.bar.bind(this);

  static bar() {
    console.log(this);
  }

}"
`;
